src/snapshots/heave__tests__cycle_detection@RequestBodySeparatedCycle.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/cycle_detection/RequestBodySeparatedCycle.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            hurl_path: "/pets",
            oas_path: "/pets",
            oas_operation_id: Some(
                "addPet",
            ),
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
            ],
            request_body_parameter: "{\n  \"B\": {\n    \"A\": {\n      \"name\": \"\"\n    },\n    \"name\": \"\"\n  },\n  \"name\": \"\"\n}",
        },
    ],
    diagnostics: [
        RequestBodySchemaCycleDetected {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            jsonpath: "$.B.A.B",
        },
    ],
}
