src/snapshots/heave__tests__diagnostic_inputs@MalformedResponseBodyReference.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/MalformedResponseBodyReference.yaml
---
GenerateResult {
    outputs: [],
    diagnostics: [
        MalformedResponseBodyReference {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            reference: "#/components/WRONG/Pet",
        },
    ],
}
