src/snapshots/heave__tests__diagnostic_inputs@MissingApplicationJsonRequestBodyMediaType.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/MissingApplicationJsonRequestBodyMediaType.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            hurl_path: "/pets",
            oas_path: "/pets",
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
            ],
            request_body_parameter: "",
        },
    ],
    diagnostics: [
        MissingApplicationJsonRequestBodyMediaType {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
        },
    ],
}
