src/snapshots/heave__tests__diagnostic_inputs@MissingComponents.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/MissingComponents.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "getPetById_200.hurl",
            hurl_path: "/pets/{{petId}}",
            oas_path: "/pets/{petId}",
            method: "GET",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isString",
            ],
            request_body_parameter: "",
        },
    ],
    diagnostics: [
        MissingComponents,
    ],
}
