src/snapshots/heave__tests__diagnostic_inputs@MissingResponseBodyReference.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/MissingResponseBodyReference.yaml
---
GenerateResult {
    outputs: [],
    diagnostics: [
        MissingResponseBodyReference {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            reference: "#/components/responses/WRONG",
        },
    ],
}
